# DiPTox

./: .gitignore  CHANGLOG.md  LICENSE  MANIFEST.in  README.md  README_ZH.md  UseExample.py  pyproject.toml  test.py
diptox/: __init__.py  chem_processor.py  cli.py  core.py  data_deduplicator.py  data_io.py  logger.py  salts.smi  solvents.smi  substructure_search.py  unit_processor.py  user_reg.py  web_request.py  web_ui.py
molppc/: __init__.py  chem_processor.py  core.py  data_deduplicator.py  data_io.py  logger.py  substructure_search.py  web_request.py
