[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molppc"
version = "0.11.2"
description = "Molecular Properties Processing Core"
authors = [{name = "Guijia Bi", email = "gjbi@mail.dlut.edu.cn"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "rdkit>=2023.3",
    "tqdm",
    "scipy",
    "openpyxl"
]