[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diptox"
version = "1.3.5"
description = "Data Integration and Processing for Computational Toxicology"
authors = [{name = "Guijia Bi", email = "gjbi@mail.dlut.edu.cn"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "rdkit>=2023.3",
    "tqdm",
    "scipy",
    "openpyxl"
]

[tool.setuptools]
packages = ["diptox"]
include-package-data = true

[project.scripts]
diptox-gui = "diptox.cli:run_gui"